2006-02-23	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Renamed some functions to make them exportable without polluting
	  namespace (i.e. added tl880_ prefix).
	* Started making modifications to allow writing a separate framebuffer
	  driver.
	* Added tl880mem.c to parallel tl880reg.c for card memory.

2006-02-15	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added rampram tool.
	* Modified striperam to accept a width parameter.
	* Added more OSD info to tl880doc.txt.
	* Updated OSD test tools.

2006-02-13	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added randreg tool.
	* Modified memdump and memload to accept addresses and lengths.
	* Added more OSD knowledge to tl880doc.txt.

2006-02-09	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Modified randram and striperam to accept address and length
	  parameters.
	* Added readmem and writemem tools to allow reading and writing TL880
	  memory.
	* Added memload tool to load a TL880 memory dump.
	* Added more OSD knowledge to tl880doc.txt.

2006-01-26	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Changed tl880init.c and tl880i2c.c to apply MyHD MDP-110
	  initialization methods to all MyHD cards until more is known about
	  the higher end cards (i.e. MDP-120 and MDP-130).

2006-01-25	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Rearranged a few initialization tasks in tl880kern.c.
	* Started trying to fix interrupts.

2006-01-21	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added OSD register randomization tool.
	* Added memory dump tool.
	* Added support for mapping any offset to tl880_mmap, to allow
	  programs like xorg's mmapr and mmapw to access the card.
	* Figured out some of the OSD stuff and wrote OSD test tools.
	* Added a top-level makefile.

2006-01-19	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added a set cursor position ioctl.
	* Removed some more debug printk's.

2006-01-17	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Cleaned some code.