@@ -1,0 +1,5 @@
+Mike Bourgeous <i_am_nitrogen at hotmail.com> - Primary developer
+
+Jason P. Matthews - Compilation fixes for kernel 2.6.17
+
+
