@@ -39,7 +39,8 @@
 #include <linux/i2c.h>
 #include <linux/i2c-algo-bit.h>
 #include <media/tuner.h>
-#include <media/audiochip.h>
+#include <media/v4l2-common.h>
+#include <media/tvaudio.h>
 
 /*** Driver definitions ***/
 
